--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "phuket",
   "version": "1.0.0",
-  "description": "",
+  "description": "Cypresstest",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cypress:open": "cypress open"
   },
   "keywords": [],
   "author": "",
